<resources>
    <string name="app_name">Tansocial</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Tansocial</string>
    <string name="Login">Login</string>
    <string name="Posicion">Mi Posición</string>
    <string name="Usuario">Usuario</string>
    <string name="Clave">Clave</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Geolocalizar">Geolocalizar</string>
    <string name="Wikipedia">Wikipedia</string>
    <string name="Configuracion">Configuración</string>
    
    <string name="Guardar">Guardar</string>
    <string name="Enviar">Enviar Camino</string>
    
    <string name="mi_primer_widget">Iniciar Monitoreo?</string>
    <string name="Monitorear">Monitorear</string>
    <string name="detener">Detener</string>
    <string name="monitoreando">Monitoreando...</string>
    <string name="actual">Actual</string>
    <string name="Distancia">Distancia de marcas </string>
    <string name="Tiempo">Tiempo de marcas </string>
    <string name="Ip">Ip del servidor </string>
    
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar </string>
    <drawable name="icon">#00F</drawable>
    <drawable name="small_icon">#F00</drawable>
    <string name="registrarnombre">Nombre</string>
    <string name="registrarmail">Mail</string>
    <string name="registrartelefono">Telefono</string>
    <string name="registrarapellido">Apellido</string>
    <string name="registrardomicilio">Domicilio</string>
    <string name="registrarestudio">Nivel de Estudio</string>
    <string name="registrarsueldo">Sueldo</string>
    <string name="registrarocupacion">Ocupacion Principal</string>
    <string name="registraredad">Edad</string>
    <string name="registrarsexo">Sexo</string>
    <string name="registrarcontrasenia">Contraseña</string>
    <string name="registraraceptar">Registrame</string>
    <string name="nombreAtributo">Nombre del Atributo</string>
    <string name="valorAtributo">Valor</string>
    <string name="aceptarAgregar">Agregar</string>
    <string name="agregarAtributo">Agregar</string>
    <string name="cancelarAtributo">Cancelar</string>
    <string name="guardarTransporte">Medio de Transporte</string>
    <string name="guardarPrecio">Precio</string>
    <string name="guardarClima">Condicion Climatica</string>
    <string name="guardarNombre">Nombre</string>
    <string name="guardarAceptar">Guardar</string>
    <string name="guardarCancelar">Cancelar</string>
    <string name="enviarLugarMenu">Enviar Lugar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="msgnotificacion">Bienvenido a TanSocial</string>
</resources>