<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/widgetMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mi_primer_widget"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Detener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detener" />

        <Button
            android:id="@+id/monitorear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monitorear" />

        <Button
            android:id="@+id/Actual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actual" />
    </LinearLayout>

</LinearLayout>