<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarnombre" />

    <EditText
        android:id="@+id/registrarnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarapellido" />

    <EditText
        android:id="@+id/registrarapellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"         
            >

            <TextView
                android:id="@+id/textView9"
                android:text="@string/registraredad" />

            <TextView
                android:id="@+id/textView10"
                android:text="@string/registrarsexo" />

        </TableRow>
        <TableRow android:id="@+id/tableRow2" >

            <EditText
                android:id="@+id/registraredad"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/registrarsexo"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
             >

            <TextView
                android:id="@+id/textView2"
                android:text="@string/registrarmail" />

            <TextView
                android:id="@+id/textView3"
            
                android:text="@string/registrartelefono" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
             >

            <EditText
                android:id="@+id/registrarmail"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registrartelefono"
                android:ems="10"
                android:inputType="phone" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            >

            <TextView
                android:id="@+id/textView11"
            
                android:text="@string/registrarcontrasenia" />

            <TextView
                android:id="@+id/textView5"
            
                android:text="@string/registrardomicilio" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
             >

            <EditText
                android:id="@+id/registrarcontrasenia"
            
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registrardomicilio"
                android:ems="10"
                android:inputType="textPostalAddress" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarestudio" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarocupacion" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/registrarestudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registrarocupacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarsueldo" />

    <EditText
        android:id="@+id/registrarsueldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/registraraceptar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/registraraceptar" />

</LinearLayout>