<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nombreAtributotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreAtributo" />

    <EditText
        android:id="@+id/nombreAtributo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/valorAtributotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valorAtributo" />

    <EditText
        android:id="@+id/valorAtributo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:inputType="text"/>

    <Button
        android:id="@+id/agregarAtributo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregarAtributo" />

    <Button
        android:id="@+id/cancelarAtributo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelarAtributo" />

</LinearLayout>